Настроен красивый вывод совместимости и информации для построения космограммы
